--- a/css/privet_bootstrap.css
+++ b/css/privet_bootstrap.css
@@ -1,3 +1,19 @@
+.cursor-pointer {cursor: pointer;}
+
+.margin-center{margin: auto 0;}
+.center{
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+.b-radius-50per{border-radius: 50%;}
+.text-black{color: #000000;}
+.hover-black:hover{color: black;}
+.hover-white:hover{color: white;}
+.box-sizing-border-box{box-sizing: border-box;}
+
+
+
 .fs-11 {font-size: 11px;}
 .fs-12 {font-size: 12px;}
 .fs-13 {font-size: 13px;}
@@ -24,9 +40,59 @@
 .fs-36 {font-size: 36px;}
 .fs-37 {font-size: 37px;}
 .fs-38 {font-size: 38px;}
+.fs-39 {font-size: 39px;}
+.fs-40 {font-size: 40px;}
+.fs-41 {font-size: 41px;}
+.fs-42 {font-size: 42px;}
+.fs-43 {font-size: 43px;}
+.fs-44 {font-size: 44px;}
+.fs-45 {font-size: 45px;}
+.fs-46 {font-size: 46px;}
+.fs-47 {font-size: 47px;}
+.fs-48 {font-size: 48px;}
+.fs-49 {font-size: 49px;}
+.fs-50 {font-size: 50px;}
+.fs-51 {font-size: 51px;}
+.fs-52 {font-size: 52px;}
+.fs-53 {font-size: 53px;}
+.fs-54 {font-size: 54px;}
+.fs-55 {font-size: 55px;}
+.fs-56 {font-size: 56px;}
+.fs-57 {font-size: 57px;}
+.fs-58 {font-size: 58px;}
+.fs-59 {font-size: 59px;}
+.fs-60 {font-size: 60px;}
+.fs-61 {font-size: 61px;}
+.fs-62 {font-size: 62px;}
+.fs-63 {font-size: 63px;}
+.fs-64 {font-size: 64px;}
+.fs-65 {font-size: 65px;}
+.fs-66 {font-size: 66px;}
+.fs-67 {font-size: 67px;}
+.fs-68 {font-size: 68px;}
+.fs-69 {font-size: 69px;}
+.fs-70 {font-size: 70px;}
+.fs-71 {font-size: 71px;}
+.fs-72 {font-size: 72px;}
+.fs-73 {font-size: 73px;}
+.fs-74 {font-size: 74px;}
+.fs-75 {font-size: 75px;}
+.fs-76 {font-size: 76px;}
+.fs-77 {font-size: 77px;}
+.fs-78 {font-size: 78px;}
+.fs-79 {font-size: 79px;}
 .fs-80 {font-size: 80px;}
+.fs-81 {font-size: 81px;}
+.fs-82 {font-size: 82px;}
+.fs-83 {font-size: 83px;}
+.fs-84 {font-size: 84px;}
+.fs-85 {font-size: 85px;}
+.fs-86 {font-size: 86px;}
+.fs-87 {font-size: 87px;}
+.fs-88 {font-size: 88px;}
+.fs-89 {font-size: 89px;}
+.fs-90 {font-size: 90px;}
 
-.cursor-pointer {cursor: pointer;}
 
 .mt-6{margin-top: 4rem !important;}
 .mt-7{margin-top: 5rem !important;}
@@ -60,6 +126,7 @@
 .mr-11{margin-right: 9rem !important;}
 .mr-12{margin-right: 10rem !important;}
 
+
 .pt-6{margin-top: 4rem !important;}
 .pt-7{margin-top: 5rem !important;}
 .pt-8{margin-top: 6rem !important;}
@@ -92,6 +159,7 @@
 .pr-11{margin-right: 9rem !important;}
 .pr-12{margin-right: 10rem !important;}
 
+
 .font-weight-100{font-weight: 100;}
 .font-weight-200{font-weight: 200;}
 .font-weight-300{font-weight: 300;}
@@ -114,6 +182,7 @@
 .fw-900{font-weight: 900;}
 .bold{font-weight: bold;}
 
+
 .opacity-0{opacity: 0;}
 .opacity-01{opacity: 0.1;}
 .opacity-02{opacity: 0.2;}
@@ -126,15 +195,51 @@
 .opacity-09{opacity: 0.9;}
 .opacity-1{opacity: 1;}
 
-.margin-center{margin: auto 0;}
-.center{
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-}
-.b-radius-50per{border-radius: 50%;}
-.text-black{color: #000000;}
-.hover-black:hover{color: black;}
+
+.w-10{width: 10px;}
+.w-15{width: 15px;}
+.w-20{width: 20px;}
+.w-25px{width: 25px;}
+.w-30px{width: 30px;}
+.w-40px{width: 40px;}
+.w-50px{width: 50px;}
+.w-60px{width: 60px;}
+.w-70px{width: 70px;}
+.w-80px{width: 80px;}
+.w-90px{width: 90px;}
+.w-100px{width: 100px;}
+
+.w-125{width: 125px;}
+.w-150{width: 150px;}
+.w-175{width: 175px;}
+.w-200{width: 200px;}
+.w-225{width: 225px;}
+.w-250{width: 250px;}
+.w-275{width: 275px;}
+.w-300{width: 300px;}
+.w-325{width: 325px;}
+.w-350{width: 350px;}
+.w-375{width: 375px;}
+.w-400{width: 400px;}
+.w-425{width: 425px;}
+.w-450{width: 450px;}
+.w-475{width: 475px;}
+.w-500{width: 500px;}
+
+
+.h-10{height: 10px;}
+.h-15{height: 15px;}
+.h-20{height: 20px;}
+.h-25px{height: 25px;}
+.h-30px{height: 30px;}
+.h-40px{height: 40px;}
+.h-50px{height: 50px;}
+.h-60px{height: 60px;}
+.h-70px{height: 70px;}
+.h-80px{height: 80px;}
+.h-90px{height: 90px;}
+.h-100px{height: 100px;}
+
 
 .line-height-1{line-height: 1px;}
 .line-height-2{line-height: 2px;}
@@ -219,68 +324,3 @@
 .line-height-84{line-height: 84px;}
 .line-height-85{line-height: 85px;}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.w-10{width: 10px;}
-.w-15{width: 15px;}
-.w-20{width: 20px;}
-.w-25px{width: 25px;}
-.w-30px{width: 30px;}
-.w-40px{width: 40px;}
-.w-50px{width: 50px;}
-.w-60px{width: 60px;}
-.w-70px{width: 70px;}
-.w-80px{width: 80px;}
-.w-90px{width: 90px;}
-.w-100px{width: 100px;}
-
-
-.w-125{width: 125px;}
-.w-150{width: 150px;}
-.w-175{width: 175px;}
-.w-200{width: 200px;}
-.w-225{width: 225px;}
-.w-250{width: 250px;}
-.w-275{width: 275px;}
-.w-300{width: 300px;}
-.w-325{width: 325px;}
-.w-350{width: 350px;}
-.w-375{width: 375px;}
-.w-400{width: 400px;}
-.w-425{width: 425px;}
-.w-450{width: 450px;}
-.w-475{width: 475px;}
-.w-500{width: 500px;}
-
-
-.h-10{height: 10px;}
-.h-15{height: 15px;}
-.h-20{height: 20px;}
-.h-25px{height: 25px;}
-.h-30px{height: 30px;}
-.h-40px{height: 40px;}
-.h-50px{height: 50px;}
-.h-60px{height: 60px;}
-.h-70px{height: 70px;}
-.h-80px{height: 80px;}
-.h-90px{height: 90px;}
-.h-100px{height: 100px;}
