--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,6 @@ body {
   padding: 0;
   font-family: 'sf-pro', sans-serif; }
 
-.section-1 nav ul {
-  margin-left: 39%; }
-.section-1 nav .nav-item {
-  margin-left: 20px;
-  margin-right: 20px;
-  border: 1px solid transparent;
-  padding-top: 5px;
-  padding-bottom: 3px; }
-  .section-1 nav .nav-item:hover {
-    border-top: 1px solid #333333;
-    border-bottom: 1px solid #333333;
-    box-sizing: border-box; }
-  .section-1 nav .nav-item .nav-link {
-    padding: 0 !important;
-    color: black; }
-    .section-1 nav .nav-item .nav-link:hover {
-      color: black !important; }
 .section-1 .title {
   font-size: 400%;
   line-height: 60px; }
@@ -110,6 +93,27 @@ body {
   outline: none;
   border: none; }
 
+@media (max-width: 768px) {
+  .section-5 .none-to-mobaile {
+    display: none; } }
+nav ul {
+  margin-left: 39%; }
+nav .nav-item {
+  margin-left: 20px;
+  margin-right: 20px;
+  border: 1px solid transparent;
+  padding-top: 5px;
+  padding-bottom: 3px; }
+  nav .nav-item:hover {
+    border-top: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    box-sizing: border-box; }
+  nav .nav-item .nav-link {
+    padding: 0 !important;
+    color: black; }
+    nav .nav-item .nav-link:hover {
+      color: black !important; }
+
 footer {
   background: #2c2c2c; }
   footer ul li a {
@@ -119,9 +123,6 @@ footer {
   footer ul li div {
     color: #ffffff; }
 
-@media (max-width: 768px) {
-  .section-5 .none-to-mobaile {
-    display: none; } }
 .section-map {
   margin-left: 90px; }
   .section-map .row {
@@ -275,5 +276,9 @@ footer {
   .sectioncar .container .row .col-md-12 .owl-carousel .imgs {
     width: 337px;
     height: 450px; } }
+.section-2 .img1 {
+  background: url("../img/image 19.png"); }
+.section-2 .content {
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
