--- a/css/style.css
+++ b/css/style.css
@@ -281,4 +281,129 @@ footer {
 .section-2 .content {
   display: none; }
 
+.section-gallareya .container .row .col-12 .one-p, .section-nashi .container .row .col-12 .one-p, .section-parking .container .row .one-p {
+  font-size: 60px;
+  font-weight: 300; }
+
+.section-gallareya .container .row .col-12 .avto, .section-nashi .container .row .col-12 .avto, .section-parking .container .row .avto {
+  font-size: 60px; }
+
+.section-nashi .container .row .col-lg-5 .textt, .section-parking .container .row .col-12 .textt .fsize {
+  font-size: 16px;
+  font-weight: 300; }
+
+.section-gallareya .container .row .col-md .card .hoverr div {
+  font-size: 14px;
+  font-weight: 300; }
+
+.section-nashi .container .row .col-lg-5 .first-text {
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 49.8px; }
+
+.section-nashi .container .row .col-lg-5 button {
+  width: 222px;
+  height: 71px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white; }
+
+.section-gallareya .owl-dots {
+  display: none; }
+.section-gallareya .owl-prev {
+  outline: none;
+  margin: 2% 21%; }
+  .section-gallareya .owl-prev span {
+    background-color: #ccc9c9;
+    padding: 5px 20px; }
+    .section-gallareya .owl-prev span:hover {
+      background-color: #F9F9F9; }
+.section-gallareya .owl-next {
+  margin: 2% -19.5%;
+  outline: none; }
+  .section-gallareya .owl-next span {
+    background-color: #ccc9c9;
+    padding: 5px 20px; }
+    .section-gallareya .owl-next span:hover {
+      background-color: #F9F9F9; }
+.section-gallareya .container .row .col-12 h6 {
+  padding: 0 !important;
+  margin: 0 !important; }
+.section-gallareya .container .row .col-12 .one-p {
+  color: #bdbdbd; }
+.section-gallareya .container .row .col-md .card {
+  width: 100%; }
+  .section-gallareya .container .row .col-md .card .hoverr {
+    bottom: 0px;
+    width: 100%;
+    height: 0px; }
+    .section-gallareya .container .row .col-md .card .hoverr div {
+      display: none; }
+  .section-gallareya .container .row .col-md .card:hover .hoverr {
+    width: 100%;
+    height: 45%;
+    transition: 1s; }
+    .section-gallareya .container .row .col-md .card:hover .hoverr div {
+      display: block; }
+
+.section-nashi .owl-carousel .owl-item button img {
+  width: 10% !important; }
+.section-nashi .container .row .col-12 {
+  padding: 0 !important; }
+  .section-nashi .container .row .col-12 h6 {
+    padding: 0 !important;
+    margin: 0 !important; }
+  .section-nashi .container .row .col-12 .one-p {
+    color: #bdbdbd; }
+.section-nashi .container .row .col-lg-5 {
+  background-color: #fafafa;
+  padding: 0 !important; }
+  .section-nashi .container .row .col-lg-5 .first-text {
+    color: #bdbdbd; }
+  .section-nashi .container .row .col-lg-5 .textt {
+    margin-top: 5%; }
+  .section-nashi .container .row .col-lg-5 button {
+    outline: none;
+    border: none;
+    margin-top: 15%; }
+
+.section-parking .container .row .one-p {
+  color: #bdbdbd; }
+.section-parking .container .row .col-12 {
+  width: 100%; }
+  .section-parking .container .row .col-12 .textt {
+    width: 66.6%; }
+
+@media (min-width: 300px) and (max-width: 600px) {
+  .section-gallareya .container .row .col-12 .one-p {
+    font-size: 30px;
+    color: #bdbdbd; }
+  .section-gallareya .container .row .col-12 .avto {
+    font-size: 30px; }
+
+  .section-parking .container .row .one-p {
+    font-size: 35px !important; }
+  .section-parking .container .row .avto {
+    font-size: 35px !important; } }
+@media (max-width: 300px) {
+  .section-gallareya .container .row .col-12 .one-p {
+    font-size: 20px;
+    color: #bdbdbd; }
+  .section-gallareya .container .row .col-12 .avto {
+    font-size: 20px; }
+
+  .section-parking .container .row .one-p {
+    font-size: 20px !important; }
+  .section-parking .container .row .avto {
+    font-size: 20px !important; }
+
+  .section-nashi .one-p {
+    font-size: 40px !important; }
+  .section-nashi .avto {
+    font-size: 40px !important; } }
+@media (min-width: 992px) and (max-width: 1200px) {
+  .section-parking .container .row .col-12 .fsize {
+    font-size: 16px; } }
+
 /*# sourceMappingURL=style.css.map */
