--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -13,3 +13,10 @@ footer{
         }
     }
 }
+@media (max-width: 768px) {
+    footer{
+        .col-sm-6{
+            margin-top: 30px;
+        }
+    }
+}
