--- a/scss/home.scss
+++ b/scss/home.scss
@@ -50,41 +50,41 @@ body {
     }
 }
 .section-4{
-    .content{
-        padding: 50px;
-        box-sizing: border-box;
-        color: #ffffff;
-        display: none;
-    }
     .img1, .img2, .img3, .img4, .img5{
         width: 100%;
         height: 255px;
-        transition: 0.5s;
         display: flex;
         align-items: center;
+        overflow: hidden;
+        .content{
+            padding: 50px;
+            box-sizing: border-box;
+            color: #ffffff;
+            transform: translateY(-300px);
+            height: 100% !important;
+            width: 100%;
+            transition: 1s;
+            
+        }
         &:hover{
             .content{
-                display: block;
+                transform: translateY(0px);
+                background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))
             }
         }
     }
     .img1{
         background: url('../img/Rectangle\ 12.png');
-        &:hover{
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../img/Rectangle\ 12.png');
-        }
+        // &:hover{
+        //     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../img/Rectangle\ 12.png');
+        // }
     }
     .img2{
         background: url('../img/image\ 15.png');
-        &:hover{
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../img/image\ 15.png');
-        }
     }
     .img3{
         background: url('../img/image\ 16.png');
-        &:hover{
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../img/image\ 16.png');
-        }
+        background-repeat: no-repeat;
         .content{
             padding: 20px;
             .text{
@@ -94,21 +94,28 @@ body {
     }
     .img4{
         background: url('../img/image\ 17.png');
-        &:hover{
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../img/image\ 17.png');
-        }
     }
     .img5{
         background: url('../img/image\ 18.png');
-        &:hover{
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../img/image\ 18.png');
-        }
+        background-repeat: no-repeat;
     }
     .btnn{
         display: block;
         width: 200px;
         height: 50px;
         background-color: #333333;
+    }
+}
+@media (max-width: 768px) {
+    .section-2{
+        .title{
+            margin-top: 50px;
+        }
+    }
+    .section-4{
+        .img2, .img4, .img5{
+            margin-top: 30px;
+        }
     }
 }
 
